--- a/Widtop/Widtop.csproj
+++ b/Widtop/Widtop.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Content\mouse_widget_image.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Content\mouse_widget_image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HidSharp" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
