- general async support - very basic keyboard implementation - update loop now runs each 100ms rendering remains at every 1000ms - wallpaper widget hack - added yeelight widget for controlling wi-fi lights through keyboard shortcuts

--- a/Widtop/Widtop.csproj
+++ b/Widtop/Widtop.csproj
@@ -7,11 +7,13 @@
     <RepositoryType>git</RepositoryType>
     <ApplicationIcon>widtop.ico</ApplicationIcon>
     <ApplicationManifest>widtop.manifest</ApplicationManifest>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HidSharp" Version="2.1.0" />
     <PackageReference Include="OpenHardwareMonitor" Version="0.7.1" />
+    <PackageReference Include="YeelightAPI" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
